# Shell-Ai

./: README.md  finn.csv  notebook.ipynb  pyproject.toml  requirements.txt  test_setup.sh
.github/workflows/: run-notebook.yml
Submissions/: 82.ipynb  85.ipynb  85Point5.ipynb  90point5.ipynb
notebooks/Day-1/: Day2.ipynb  EDA.ipynb  Final Notebook.ipynb  change.ipynb  final.md  sa.ipynb  this can be submitted.ipynb
notebooks/Day-2/: 80-SHIII.ipynb  EDA.ipynb  chatGPT.ipynb  main.ipynb  optimized_pipeline_submission.csv  production_no_validation_submission.csv  robust_ensemble_submission.csv
notebooks/Day-3/: After85.ipynb  Model Analysis Results.csv  chock.ipynb  dinner.ipynb  final_model_submission.csv  i.ipynb
notebooks/Day-4/: Chaat.ipynb  Morning.ipynb  dock.ipynb  final_submission.csv  finbath_submission.csv  para.ipynb  parallel.ipynb
notebooks/Day-5/: abb.ipynb  ann.ipynb  best_tuned_model.h5  individual_property_submission_20250714_151549.csv  submission_ann.csv  submission_ann_tuned.csv
notebooks/Day-6/: Jeeva Tuning.ipynb  Notebook.ipynb  OCR.py  breakthrough_ensemble.py  fixing.py  main.py  ocr_extract.py  ocr_new_output.txt  ocr_output.txt  output.txt  pyproject.toml
notebooks/Day-7/: AfterGYM.ipynb  CICD.ipynb  new.ipynb  old.ipynb
notebooks/Day-8/: AfterClass.ipynb  chcokmaxx.ipynb  submission_breakthrough_90plus_expanded_no_lgbm.csv  this did not work.csv
notebooks/Day-9/: Enessamble.ipynb  Hyper Notebook.ipynb  Morning.ipynb  hyper.ipynb  submission_breakthrough_90plus_with_gp_stacking.csv
src/: Encoding-Convertor.py
(+39 files in other folders)
