[project]
name = "shellai"
version = "0.1.0"
description = "LOL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "chardet>=5.2.0",
    "ipykernel>=6.29.5",
    "keras>=3.10.0",
    "keras-tuner>=1.4.7",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "xgboost>=3.0.2",
]

[tool.uv.workspace]
members = [
    "notebooks/Day-6",
]
